--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,6 @@ set_target_properties(ANSI_SGR2HTML PROPERTIES
     PUBLIC_HEADER src/ansi_sgr2html.h
     VERSION ${PROJECT_VERSION}
     SOVERSION 0
+    CXX_STANDARD 17
+    CXX_EXTENSIONS OFF
 )
