--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(ANSI_SGR2HTML VERSION 0.1 DESCRIPTION "Basic ANSI Select Graphic Rendition Control Sequence to HTML library.")
+project(ANSI_SGR2HTML VERSION 1.0.0 DESCRIPTION "Basic ANSI Select Graphic Rendition Control Sequence to HTML library.")
 
 set(LIBRARY_SRCS
 #     src/ansi_sgr2html.h
@@ -15,10 +15,10 @@ add_library(ANSIEsc2HTML_static STATIC
     "${LIBRARY_SRCS}"
 )
 
-set_target_properties(ANSIEsc2HTML PROPERTIES 
+set_target_properties(ANSIEsc2HTML ANSIEsc2HTML_static PROPERTIES 
     PUBLIC_HEADER src/ansi_esc2html.h
-    VERSION ${PROJECT_VERSION}
-    SOVERSION 0
+#     VERSION ${PROJECT_VERSION}
+#     SOVERSION 0
     CXX_STANDARD 17
     CXX_EXTENSIONS OFF
 )
