--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,7 +20,7 @@ jobs:
           run: mkdir build
             
         - name: cmake configure
-          run: -DCMAKE_BUILD_TYPE=Release ..
+          run: cmake -DCMAKE_BUILD_TYPE=Release ..
           working-directory: build
         
         - name: cmake build
