--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,15 +8,13 @@ name: Build and test
 on: [push, pull_request]
 
 jobs:
-  build:
-
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
         - uses: actions/checkout@v2
         
         - name: making build directory
-          shell: bash
           run: mkdir build
             
         - name: cmake configure
@@ -24,10 +22,9 @@ jobs:
           working-directory: build
         
         - name: cmake build
-          shell: bash
           run: cmake --build .
           working-directory: build
 
         - name: cmake test
           run: ctest --output-on-failure
-          working-directory: build_dir
+          working-directory: build
